--- a/package.json
+++ b/package.json
@@ -24,11 +24,17 @@
     "graphql-tag": "^2.12.6",
     "react": "18.2.0",
     "react-native": "0.71.4",
+    "react-native-base64": "^0.2.1",
+    "react-native-camera": "^4.2.1",
     "react-native-config": "^1.5.0",
+    "react-native-fast-image": "^8.6.3",
+    "react-native-fs": "^2.20.0",
     "react-native-modal-datetime-picker": "^15.0.0",
+    "react-native-permissions": "^3.8.0",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
-    "react-redux": "^8.0.5"
+    "react-redux": "^8.0.5",
+    "rn-fetch-blob": "^0.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
